--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "piattaforma-scuola-frontend",
   "version": "0.1.0",
-  "private": true,
+  "license": "AGPL-3.0",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
