--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.1.0",
+    "@vue/composition-api": "^1.4.1",
+    "@vueuse/core": "^7.2.2",
     "core-js": "^3.6.5",
     "pinia": "^0.5.4",
     "register-service-worker": "^1.7.1",
