--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vue/composition-api": "^1.4.1",
     "@vueuse/core": "^7.2.2",
     "core-js": "^3.6.5",
+    "gsap": "^3.8.0",
     "pinia": "^0.5.4",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
