--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@vue/composition-api": "^1.4.1",
     "@vueuse/core": "^7.2.2",
+    "@vueuse/integrations": "^7.5.4",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "gsap": "^3.8.0",
     "pinia": "^0.5.4",
     "register-service-worker": "^1.7.1",
+    "universal-cookie": "^4.0.4",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-router": "^3.2.0",
