--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vue/composition-api": "^1.4.1",
     "@vueuse/core": "^7.2.2",
     "@vueuse/integrations": "^7.5.4",
+    "add": "^2.0.6",
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "gsap": "^3.8.0",
@@ -22,8 +23,10 @@
     "universal-cookie": "^4.0.4",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
+    "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
