VueCLI to ViteJS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,9 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env",
-      "jest"
+      "jest",
+      "vite/client",
+      "@types/node"
     ],
     "paths": {
       "@/*": [
