--- a/package.json
+++ b/package.json
@@ -4,25 +4,37 @@
   "license": "AGPL-3.0",
   "private": false,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
+    "@amatlash/vite-plugin-stylelint": "^1.2.0",
     "@vue/composition-api": "^1.4.1",
     "@vueuse/core": "^7.2.2",
     "@vueuse/integrations": "^7.5.4",
     "add": "^2.0.6",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
     "axios": "^0.25.0",
-    "core-js": "^3.6.5",
+    "graphql": "^16.3.0",
     "gsap": "^3.8.0",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^2.12.313",
     "pinia": "^0.5.4",
+    "postcss-html": "^1.3.0",
     "register-service-worker": "^1.7.1",
+    "subscriptions-transport-ws": "^0.11.0",
     "universal-cookie": "^4.0.4",
+    "unplugin-vue-components": "^0.17.16",
+    "vite-plugin-eslint": "^1.3.0",
     "vue": "^2.6.11",
-    "vue-apollo": "^3.0.0-beta.11",
+    "vue-apollo": "^3.1.0",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
@@ -30,28 +42,25 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@types/node": "^17.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
+    "@vitejs/plugin-vue": "^2.1.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^1.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "graphql-tag": "^2.9.0",
+    "eslint": "8",
+    "eslint-plugin-vue": "8",
+    "graphql-tag": "^2.12.6",
     "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
+    "stylelint": "^14.3.0",
+    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint-config-recommended-vue": "^1.1.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-order": "^5.0.0",
     "typescript": "~4.1.5",
-    "vue-cli-plugin-apollo": "^0.22.2",
-    "vue-cli-plugin-pinia": "^0.0.6",
-    "vue-cli-plugin-vuetify": "^2.4.4",
-    "vue-template-compiler": "^2.6.11",
+    "vite": "^2.7.13",
+    "vite-plugin-vue2": "^1.9.3",
+    "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
   }
 }
