--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
-    "@amatlash/vite-plugin-stylelint": "^1.2.0",
     "@vue/composition-api": "^1.4.1",
     "@vueuse/core": "^7.2.2",
     "@vueuse/integrations": "^7.5.4",
@@ -48,17 +47,15 @@
     "@vitejs/plugin-vue": "^2.1.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^1.0.3",
+    "dotenv": "^16.0.0",
     "eslint": "8",
     "eslint-plugin-vue": "8",
     "graphql-tag": "^2.12.6",
     "sass": "~1.32.0",
-    "stylelint": "^14.3.0",
-    "stylelint-config-recommended-scss": "^5.0.2",
-    "stylelint-config-recommended-vue": "^1.1.0",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-order": "^5.0.0",
     "typescript": "~4.1.5",
     "vite": "^2.7.13",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-environment": "^1.1.0",
     "vite-plugin-vue2": "^1.9.3",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
