--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
+    "xlsx": "^0.18.2",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
