--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-apollo": "^3.1.0",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^5.0.2",
     "vuetify": "^2.4.0",
     "xlsx": "^0.18.2",
     "yarn": "^1.22.17"
