--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
+    "@dreaming-codes/vue-dreaming-pdf": "^0.1.2",
     "@sweetalert2/theme-dark": "^5.0.10",
     "@vue/composition-api": "^1.4.1",
     "@vueuse/core": "^7.2.2",
@@ -22,6 +23,7 @@
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
     "axios": "^0.25.0",
+    "fabric": "^5.2.1",
     "graphql": "^16.3.0",
     "gsap": "^3.8.0",
     "pdfjs-dist": "^2.12.313",
@@ -42,6 +44,7 @@
     "yarn": "^1.22.17"
   },
   "devDependencies": {
+    "@types/fabric": "^4.5.7",
     "@types/jest": "^24.0.19",
     "@types/node": "^17.0.15",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
