--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
-    "@dreaming-codes/vue-dreaming-pdf": "^0.1.2",
     "@sweetalert2/theme-dark": "^5.0.10",
     "@vue/composition-api": "^1.4.1",
     "@vueuse/core": "^7.2.2",
@@ -36,6 +35,7 @@
     "vite-plugin-eslint": "^1.3.0",
     "vue": "^2.6.11",
     "vue-apollo": "^3.1.0",
+    "vue-dreaming-pdf": "^0.1.3",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
     "vue-sweetalert2": "^5.0.2",
