--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,14 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "types": [
       "jest",
       "vite/client",
       "@types/node",
-      "vue-sweetalert2"
+      "vue-sweetalert2",
+      "vue-class-component"
     ],
     "paths": {
       "@/*": [
