--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
       "vite/client",
       "@types/node",
       "vue-sweetalert2",
-      "vue-class-component"
+      "vue-class-component",
+      "vue-dreaming-pdf"
     ],
     "paths": {
       "@/*": [
