--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sweetalert2/theme-dark": "^5.0.10",
+    "@types/apollo-upload-client": "^17.0.0",
     "@vue/composition-api": "^1.4.1",
     "@vueuse/core": "^7.2.2",
     "@vueuse/integrations": "^7.5.4",
@@ -20,6 +21,7 @@
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
     "apollo-link-ws": "^1.0.20",
+    "apollo-upload-client": "^17.0.0",
     "apollo-utilities": "^1.3.4",
     "axios": "^0.25.0",
     "fabric": "^5.2.1",
