Created debug mode

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-apollo": "^3.1.0",
     "vue-class-component": "^7.2.6",
     "vue-dreaming-pdf": "^0.2.2",
+    "vue-matrix-digit-rain": "^1.0.1",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
     "vue-sweetalert2": "^5.0.2",
